finaliza filtro por id, para consulta ao post
